--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.mvc.view.suffix=.jsp
 # Database Configuration (MySQL)
 spring.datasource.url=jdbc:mysql://localhost:3306/finance_navigator?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=teeSQL28
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=true
